// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  admin
  manager
  driver
  owner
  employee
  superadmin
}

enum VehicleStatus {
  AVAILABLE
  IN_USE
  MAINTENANCE
  OUT_OF_SERVICE
  INACTIVE
}

enum NotificationType {
  INFO
  WARNING
  ALERT
  SYSTEM
}

enum NotificationStatus {
  UNREAD
  READ
  ARCHIVED
}

enum RouteStatus {
  ACTIVE
  INACTIVE
  CANCELLED
}

enum PaymentStatus {
  PENDING
  PROCESSED
  CANCELLED
}

enum ApprovalStatus {
  PENDING
  APPROVED
  REJECTED
}

enum DriverStatus {
  ACTIVE
  OFF_DUTY
  ON_BREAK
  INACTIVE
}

enum VehicleType {
  IN_HOUSE
  OUTSOURCED
}

enum ImportanceLevel {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}

enum LocationType {
  BRANCH
  HQ
}

model Location {
  id             String       @id @default(cuid())
  address        String?
  latitude       Float?
  longitude      Float?
  type           LocationType @default(BRANCH)
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt
  organizationId String

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  employees    Employee[]   @relation("EmployeeLocation")
  routes       Route[]

  @@map("locations")
}

model Department {
  id             String   @id @default(cuid())
  name           String
  organizationId String
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  // Relations
  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  employees    Employee[]

  // Indexes
  @@index([organizationId])
  @@map("departments")
}

model Shift {
  id             String   @id @default(cuid())
  name           String
  startTime      DateTime
  endTime        DateTime
  timeZone       String
  organizationId String
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  // Relations
  organization        Organization          @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  employees           Employee[]
  routes              Route[]
  vehicleAvailability VehicleAvailability[]

  // Indexes
  @@index([organizationId])
  @@map("shifts")
}

model Employee {
  id             String    @id @default(cuid())
  name           String
  location       String?
  assigned       Boolean   @default(false)
  departmentId   String
  shiftId        String
  stopId         String?   @unique
  organizationId String
  userId         String
  locationId     String?
  deleted        Boolean   @default(false)
  deletedAt      DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  user         User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  department   Department   @relation(fields: [departmentId], references: [id], onDelete: Cascade)
  shift        Shift        @relation(fields: [shiftId], references: [id], onDelete: Cascade)
  stop         Stop?        @relation(fields: [stopId], references: [id], onDelete: SetNull)
  workLocation Location?    @relation("EmployeeLocation", fields: [locationId], references: [id], onDelete: SetNull)

  // Indexes
  @@index([assigned])
  @@index([organizationId])
  @@index([departmentId])
  @@index([shiftId])
  @@index([deleted, deletedAt])
  @@map("employees")
}

model Driver {
  id              String       @id @default(cuid())
  name            String
  email           String?
  licenseNumber   String
  phoneNumber     String?
  status          DriverStatus @default(ACTIVE) // active, off-duty, on-break
  experienceYears Int?
  rating          Float?       @default(0.0)
  isActive        Boolean      @default(true)
  organizationId  String
  deleted         Boolean      @default(false)
  deletedAt       DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  organization        Organization          @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  vehicleAvailability VehicleAvailability[]
  payrollReports      PayrollReport[]
  assignedVehicles    Vehicle[]             @relation("VehicleDriver")

  @@unique([organizationId, email])
  @@unique([organizationId, licenseNumber])
  @@unique([organizationId, phoneNumber])
  // Indexes
  @@index([organizationId])
  @@index([status])
  @@index([isActive])
  @@index([deleted, deletedAt])
  @@map("drivers")
}

model VehicleCategory {
  id             String @id @default(cuid())
  name           String
  capacity       Int    @default(0)
  organizationId String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  organization    Organization     @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  vehicles        Vehicle[]
  vehicleRequests VehicleRequest[]

  // Indexes
  @@index([organizationId])
  @@map("vehicle_categories")
}

model Vehicle {
  id              String        @id @default(cuid())
  plateNumber     String        @unique
  name            String?
  model           String
  make            String?
  type            VehicleType   @default(IN_HOUSE) // in-house or outsourced
  vendor          String? // For outsourced vehicles
  capacity        Int
  year            Int?
  status          VehicleStatus @default(AVAILABLE)
  lastMaintenance DateTime?
  nextMaintenance DateTime?
  dailyRate       Decimal?      @db.Decimal(10, 2)
  isActive        Boolean       @default(true)
  categoryId      String?
  driverId        String? // Assigned driver
  organizationId  String
  deleted         Boolean       @default(false)
  deletedAt       DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  organization        Organization          @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  category            VehicleCategory?      @relation(fields: [categoryId], references: [id], onDelete: SetNull)
  driver              Driver?               @relation("VehicleDriver", fields: [driverId], references: [id], onDelete: SetNull)
  vehicleAvailability VehicleAvailability[]
  payrollReports      PayrollReport[]
  routes              Route[]

  // Indexes
  // For filtering by vehicle status
  // For filtering in-house vs outsourced
  @@index([organizationId])
  @@index([categoryId])
  @@index([driverId])
  @@index([status])
  @@index([type])
  @@index([isActive])
  @@index([deleted, deletedAt])
  @@map("vehicles")
}

model Route {
  id             String      @id @default(cuid())
  name           String
  description    String?
  vehicleId      String?
  shiftId        String?
  date           DateTime?
  startTime      DateTime?
  endTime        DateTime?
  totalDistance  Float?
  totalTime      Float?
  status         RouteStatus @default(ACTIVE)
  isActive       Boolean     @default(true)
  organizationId String
  locationId     String?
  deleted        Boolean     @default(false)
  deletedAt      DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  organization        Organization          @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  vehicle             Vehicle?              @relation(fields: [vehicleId], references: [id], onDelete: SetNull)
  shift               Shift?                @relation(fields: [shiftId], references: [id], onDelete: SetNull)
  location            Location?             @relation(fields: [locationId], references: [id], onDelete: SetNull)
  stops               Stop[]
  vehicleAvailability VehicleAvailability[]

  // Indexes
  @@index([organizationId])
  @@index([vehicleId])
  @@index([shiftId])
  @@index([locationId])
  @@map("routes")
}

model Stop {
  id                   String    @id @default(cuid())
  name                 String
  latitude             Float?
  longitude            Float?
  address              String?
  sequence             Int?      @default(0)
  order                Int       @default(0)
  routeId              String?
  organizationId       String
  estimatedArrivalTime DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  route        Route?       @relation(fields: [routeId], references: [id], onDelete: SetNull)
  employee     Employee?

  // Indexes
  @@index([organizationId])
  @@index([routeId])
  @@map("stops")
}

model VehicleAvailability {
  id             String   @id @default(cuid())
  date           DateTime
  startTime      DateTime
  endTime        DateTime
  available      Boolean  @default(true)
  vehicleId      String
  driverId       String
  routeId        String?
  shiftId        String?
  organizationId String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  vehicle      Vehicle      @relation(fields: [vehicleId], references: [id], onDelete: Cascade)
  driver       Driver       @relation(fields: [driverId], references: [id], onDelete: Cascade)
  route        Route?       @relation(fields: [routeId], references: [id], onDelete: SetNull)
  shift        Shift?       @relation(fields: [shiftId], references: [id], onDelete: SetNull)

  // Indexes
  @@unique([vehicleId, shiftId, date])
  @@index([organizationId])
  @@index([vehicleId])
  @@index([driverId])
  @@index([routeId])
  @@index([shiftId])
  @@index([date])
  @@map("vehicle_availability")
}

model PayrollReport {
  id              String        @id @default(cuid())
  vehicleId       String?
  driverId        String?
  workedDays      Int?
  dailyRate       Decimal?      @db.Decimal(10, 2)
  totalPayment    Decimal       @db.Decimal(10, 2)
  payDate         DateTime?
  period          String // e.g., "2024-01", "Q1-2024"
  month           String?
  year            Int?
  status          PaymentStatus @default(PENDING)
  maintenanceCost Decimal?      @db.Decimal(10, 2)
  insuranceCost   Decimal?      @db.Decimal(10, 2)
  otherExpenses   Decimal?      @db.Decimal(10, 2)
  efficiency      Int           @default(0) // Efficiency percentage
  utilizationRate Int           @default(0) // Utilization rate percentage
  totalAmount     Float?
  hoursWorked     Float?
  overtimeHours   Float?
  deductions      Float?
  bonuses         Float?
  organizationId  String
  generatedAt     DateTime      @default(now())
  paidAt          DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  vehicle      Vehicle?     @relation(fields: [vehicleId], references: [id], onDelete: SetNull)
  driver       Driver?      @relation(fields: [driverId], references: [id], onDelete: SetNull)

  // Indexes
  @@index([organizationId])
  @@index([vehicleId])
  @@index([driverId])
  @@index([period])
  @@map("payroll_reports")
}

model Notification {
  id              String             @id @default(cuid())
  title           String
  message         String
  type            NotificationType   @default(INFO)
  status          NotificationStatus @default(UNREAD)
  toRoles         String[] // Array of role strings
  fromRole        String?
  importance      ImportanceLevel    @default(MEDIUM)
  localTime       String?
  relatedEntityId String?
  userId          String? // Nullable for system-wide notifications
  organizationId  String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  // Indexes
  @@index([organizationId])
  @@index([userId])
  @@index([status])
  @@index([type])
  @@index([createdAt])
  @@map("notifications")
}

model VehicleRequest {
  id             String         @id @default(cuid())
  name           String
  licensePlate   String
  categoryId     String?
  dailyRate      Float?
  capacity       Int
  type           String
  model          String
  vendor         String?
  status         ApprovalStatus @default(PENDING)
  requestedBy    String // Role of the requester
  approvedBy     String? // Role of the approver
  approvedAt     DateTime?
  comment        String? // For rejection reasons or notes
  organizationId String

  requestedAt DateTime @default(now())
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  // Relations
  organization Organization     @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  category     VehicleCategory? @relation(fields: [categoryId], references: [id], onDelete: SetNull)

  // Indexes
  @@index([organizationId])
  @@index([categoryId])
  @@map("vehicle_requests")
}

// ===========Better-Auth models=============

model User {
  id            String       @id
  name          String
  email         String
  emailVerified Boolean
  image         String?
  createdAt     DateTime
  updatedAt     DateTime
  role          String?
  banned        Boolean?
  banReason     String?
  banExpires    DateTime?
  sessions      Session[]
  accounts      Account[]
  members       Member[]
  invitations   Invitation[]
  employees     Employee[] // Back-reference to Employee

  isSubscribed Boolean?

  @@unique([email])
  @@map("user")
}

model Session {
  id                   String   @id
  expiresAt            DateTime
  token                String
  createdAt            DateTime
  updatedAt            DateTime
  ipAddress            String?
  userAgent            String?
  userId               String
  user                 User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  impersonatedBy       String?
  activeOrganizationId String?

  @@unique([token])
  @@map("session")
}

model Account {
  id                    String    @id
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime
  updatedAt             DateTime

  @@map("account")
}

model Organization {
  id          String       @id
  name        String
  slug        String?
  logo        String?
  createdAt   DateTime
  metadata    String?
  members     Member[]
  invitations Invitation[]
  locations   Location[]

  // Business model relations
  departments         Department[]
  shifts              Shift[]
  employees           Employee[]
  drivers             Driver[]
  vehicleCategories   VehicleCategory[]
  vehicles            Vehicle[]
  routes              Route[]
  stops               Stop[]
  vehicleAvailability VehicleAvailability[]
  payrollReports      PayrollReport[]
  notifications       Notification[]
  vehicleRequests     VehicleRequest[]

  @@unique([slug])
  @@map("organization")
}

model Member {
  id             String       @id
  organizationId String
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  userId         String
  user           User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  role           String
  createdAt      DateTime

  @@map("member")
}

model Invitation {
  id             String       @id
  organizationId String
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  email          String
  role           String?
  status         String
  expiresAt      DateTime
  inviterId      String
  user           User         @relation(fields: [inviterId], references: [id], onDelete: Cascade)

  @@map("invitation")
}

model Verification {
  id         String    @id
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime?
  updatedAt  DateTime?

  @@map("verification")
}
